add onload function

--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
   <body>
     <div class="main-container">
       <div class="advise-container">
-        <p class="advice-id">ADVICE # <span class="id">117</span> </p>
+        <p class="advice-id">ADVICE # <span class="id"></span> </p>
         <p class="advise-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-          ratione rem provident sapiente minus, ut at! Dignissimos quibusdam
-          magnam corporis reprehenderit quam qui? Impedit asperiores ea beatae
-          rerum accusantium excepturi?
+         
         </p>
         <img
           class="pattern-divider"
