--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
     <link rel="stylesheet" href="./css/main.css" />
-</head>
+  </head>
   <body>
     <div class="main-container">
       <div class="advise-container">
-        <p class="advice-id">ADVICE # <span class="id"></span> </p>
-        <p class="advise-text">
-         
-        </p>
+        <p class="advice-id">ADVICE # <span class="id"></span></p>
+        <p class="advise-text"></p>
         <img
           class="pattern-divider"
           src="./images/pattern-divider-desktop.svg"
